# ProfCalc

./: .gitignore  CHANGELOG.md  ChatHistory.md  DATA.md  FIX_BMAP_INTEGRATION.md  MENU_FLOW.md  MENU_IMPLEMENTATION.md  MENU_LIST.txt  README.md  README_RUN_HELP.md  bounds_both_20251107_142742_surveys.txt  bounds_both_20251107_143512_xon_xoff.dbf  bounds_both_20251107_145134_xon_xoff.shp  bounds_both_20251107_145240_summary.csv  bounds_both_20251107_151758_xon_xoff.dbf  bounds_both_20251107_151758_xon_xoff.shp  demo_coordinate_transforms.py  import_graph.py  import_scan.py  mypy.ini  output_get_profile_dates.txt  output_profile_dates.csv  profcalc  pytest.ini  requirements.txt  run_dev.ps1  run_menu.cmd  run_menu.ps1  run_profcalc.cmd  run_profcalc.ps1  setup.cfg  validation_enhanced.py
.github/: copilot-instructions.md  my_glossary.txt
archive/: debug_csv_detailed.py  debug_csv_parse.py  debug_delimiter.py  demo_coordinate_transforms.py
data/: ProfileOriginAzimuths.csv  bounds_both_20251107_140219_xon_xoff.dbf  bounds_both_20251107_140219_xon_xoff.shp  bounds_both_20251107_143800_xon_xoff.shx  bounds_both_20251107_144019_xon_xoff.dbf  bounds_both_20251107_145134_xon_xoff.shx  bounds_both_20251107_145332_summary.txt  bounds_both_20251107_151728_surveys.csv  bounds_both_20251107_151758_xon_xoff.prj  bounds_both_20251107_151758_xon_xoff.shx
dev_scripts/: README.md  bmap_style_volume_check.py  bmap_volume_batch_check.py  cli_prototype.py  compare_contour_xlocs.py  comprehensive_test.py  debug_csv_detailed.py  debug_csv_parse.py  debug_delimiter.py  fix_md_fences.py  (+4 more)
(+302 files in other folders)
