[metadata]
name = profcalc
version = 0.0.0
description = Coastal profile analysis tools (ProfCalc)
long_description = file: README.md
long_description_content_type = text/markdown
author = Unknown
license = MIT

[options]
package_dir =
    = src
# Explicitly list the package to avoid accidentally picking up a top-level
# 'src' package (some repos include a stray src/__init__.py). This ensures
# editable installs work reliably.
packages =
    profcalc
include_package_data = True

[options.entry_points]
# console_scripts =
#     profcalc = profcalc.cli.menu_system:main_menu
